# mcp-kali

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RUST_PORT.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: PLUGIN_AUTHORING.md  PUBLISHING.md  USER_MANUAL.md
examples/: .env_mcp-kali.example  mcp-kali.conf  mcp-kali.conf.example  mcp-kali.config  mcp-kali.config.example  mcp-kali.system.conf.example
mcp_connectors/: README.md
mcp_connectors/claude-desktop/mcp-kali/: README.md  manifest.json
mcp_connectors/codex/.agents/plugins/: marketplace.json
mcp_connectors/codex/plugins/mcp-kali/: .mcp.json
mcp_connectors/codex/plugins/mcp-kali/.codex-plugin/: plugin.json
mcp_connectors/codex/plugins/mcp-kali/skills/use-mcp-kali/: SKILL.md
mcp_connectors/codex/plugins/mcp-kali/skills/use-mcp-kali/agents/: openai.yaml
mcp_connectors/scripts/: build-claude-desktop.sh  build-codex.sh  validate-source.sh
plugins/nmap/: plugin.yaml
plugins/nmap/references/: operator-boundaries.md  safe-profiles.md
src/: api.rs  commands.rs  config.rs  dashboard.html  jobs.rs  lib.rs  logging.rs  main.rs  mcp.rs  models.rs  plugins.rs
systemd/: mcp-kali.logrotate.in  mcp-kali.service.in
tests/: dashboard.rs  install_logging_templates.rs  logging.rs
